--- a/style.css
+++ b/style.css
@@ -38,20 +38,25 @@ body {
   text-decoration: none;
 }
 
-.main-nav ul {
-  display: flex;
-  padding:0;
-  margin:0;
-  list-style: none;
-}
-.main-nav a{
+.navbar-nav a{
   color: inherit;
   text-decoration: none;
   padding: 1rem;
   font-size: 18px;
 }
-.main-nav a:hover{
-  color:whitesmoke;
+.navbar-nav a:hover{
+  color:white;
+}
+.modal-footer button{
+  margin-top: -8px;
+  padding: .5rem 0.5rem;
+  border-radius: .5rem;
+  outline:none;
+  border:none;
+  text-decoration:none;
+
+}
+
 }
 .btn{
   margin-top: -15px;
